[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.223529, 0.223529, 1 )

[node name="MainMenuContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
margin_left = 479.0
margin_top = 254.0
margin_right = 544.0
margin_bottom = 346.0

[node name="StartBtn" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "Start"

[node name="SettingsBtn" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Settings"

[node name="ControlsBtn" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
text = "Controls"

[node name="QuitBtn" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0
text = "Quit"

[node name="SettingsContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_left = 491.0
margin_top = 280.0
margin_right = 533.0
margin_bottom = 320.0

[node name="Volume" type="HSlider" parent="SettingsContainer/VBoxContainer"]
margin_right = 42.0
margin_bottom = 16.0
max_value = 1.0
step = 0.0

[node name="Label" type="Label" parent="SettingsContainer/VBoxContainer/Volume"]
margin_left = -60.0
margin_top = -1.0
margin_right = -5.0
margin_bottom = 14.0
text = "Volume"
align = 1
valign = 1

[node name="Label2" type="Label" parent="SettingsContainer/VBoxContainer/Volume"]
margin_left = 45.0
margin_top = 2.0
margin_right = 100.0
margin_bottom = 17.0
align = 1
valign = 1

[node name="ReturnBtn" type="Button" parent="SettingsContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 42.0
margin_bottom = 40.0
text = "Back"

[node name="ControlsContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer"]
margin_left = 386.0
margin_top = 255.0
margin_right = 637.0
margin_bottom = 344.0

[node name="Label" type="Label" parent="ControlsContainer/VBoxContainer"]
margin_right = 251.0
margin_bottom = 65.0
text = "Movement - W, A, S, D
Interact / Take Photo - Left Mouse Click
Use Camera - Right Mouse Click
Pause - Escape Key"

[node name="ControlsReturnBtn" type="Button" parent="ControlsContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 251.0
margin_bottom = 89.0
text = "Return"

[connection signal="pressed" from="MainMenuContainer/VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/ControlsBtn" to="." method="_on_ControlsBtn_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="value_changed" from="SettingsContainer/VBoxContainer/Volume" to="." method="_on_Volume_value_changed"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/ReturnBtn" to="." method="_on_ReturnBtn_pressed"]
[connection signal="pressed" from="ControlsContainer/VBoxContainer/ControlsReturnBtn" to="." method="_on_ControlsReturnBtn_pressed"]
